main-wordpress/main-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-controller-ops-main
  namespace: kube-devops
spec:
  rules:
  - host: main.ops.dragonest.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ops-main-service
          servicePort: web
